fixed top navbar for a better display on mobile devices

--- a/style.css
+++ b/style.css
@@ -18,10 +18,16 @@ body {
 .navbar {
     background-color: #03182e;
     display: flex;
-    
+
     align-items: center;
     padding: 10px 20px;
     font-family: 'Arial', sans-serif;
+}
+
+.nav-link {
+    margin: 0 10px;
+    color: white;
+    text-decoration: none;
 }
 
 .navbar-left {
@@ -204,6 +210,9 @@ article {
     .card {
         padding: 15px;
     }
+    .nav-link {
+        margin: 10px 0; /* Adds vertical margin between buttons */
+    }
 }
 
 /* Styles for screens 375px and up (iPhone 6/7/8, X/XS, 11 Pro) */
@@ -234,6 +243,9 @@ article {
     .card {
         padding: 15px;
     }
+    .nav-link {
+        margin: 10px 0; /* Adds vertical margin between buttons */
+    }
 }
 
 /* Styles for screens 414px and up (iPhone 6/7/8 Plus, XS Max, 11, 11 Pro Max) */
@@ -263,5 +275,8 @@ article {
 
     .card {
         padding: 15px;
+    }
+    .nav-link {
+        margin: 10px 0; /* Adds vertical margin between buttons */
     }
 }
